[package]
name = "channel_broker"
version = "0.2.1"
edition = "2024"

[features]
default = ["std-mpsc-channel", "sync-channel"]
std-mpsc-channel = []
sync-channel = []
broadcast-channel = ["dep:tokio"]
watch-channel = ["dep:tokio"]
tracing = ["dep:tracing"]

[dependencies]
paste = "1.0.15"
tokio = { version = "1.52.1", features = ["sync"], optional = true }
tracing = { version = "0.1.41", features = ["attributes"], optional = true }

[dev-dependencies]
tokio = { version = "1.52.1", features = ["macros", "rt", "sync"] }
tracing-subscriber = "0.3.20"
